--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
-    url: jdbc:h2:mem:testdb
-    name: sa
+    url: jdbc:h2:mem:test
+    name: test
     password:
     driver-class-name: org.h2.Driver
   h2:
@@ -13,3 +13,6 @@ spring:
     properties:
       hibernate:
         format_sql: true
+        ddl-auto: update
+    database-platform: org.hibernate.dialect.H2Dialect
+
